force-app/main/default/objects/FieloPLT__Action__c/FieloPLT__Action__c.object-meta.xml
<CustomObject>
    <description>Action comprises an Object (either a Salesforce standard or a custom object) and a Member (either an Individual, Organization or Organization Contributor).</description>
    <label>Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>