force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__Active__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Active__c</fullName>
    <description>Action status. If checked, there are related Rules or Missions within an active Promotion or Challenge. Only Actions with Active status are processed.</description>
    <formula>IF((FieloPLT__RulesQuantity__c &gt; 0 || FieloPLT__MissionsQuantity__c &gt; 0 || FieloPLT__TemplatesQuantity__c &gt; 0),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Action status. If checked, there are related Rules or Missions within an active Promotion or Challenge. Only Actions with Active status are processed.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>