force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__CriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CriteriaFields__c</fullName>
    <description>It stores a JSON file in which Rule and/or Mission Criteria, Criterion Group and Master-detail processing are displayed. It is completed when a Promotion or Challenge is enabled.</description>
    <inlineHelpText>It stores a JSON file in which Rule and/or Mission Criteria, Criterion Group and Master-detail processing are displayed. It is completed when a Promotion or Challenge is enabled.</inlineHelpText>
    <label>Criteria Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>