force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__MissionsQuantity__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MissionsQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It shows the number of related Missions in &quot;Active&quot; Challenges.</description>
    <inlineHelpText>It shows the number of related Missions in &quot;Active&quot; Challenges.</inlineHelpText>
    <label>Mission Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>