force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__RulesQuantity__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RulesQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It shows the number of related Rules in &quot;Active&quot; Promotions.</description>
    <inlineHelpText>It shows the number of related Rules in &quot;Active&quot; Promotions.</inlineHelpText>
    <label>Rule Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>