force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__RuleTrigger__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RuleTrigger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Action Engine Trigger.</description>
    <inlineHelpText>Choose an Engine Trigger related to the Action.</inlineHelpText>
    <label>Engine Trigger</label>
    <referenceTo>FieloPLT__RuleTrigger__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>