force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__TargetEmailField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TargetEmailField__c</fullName>
    <label>Target Email Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>