force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__TargetEmailObject__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TargetEmailObject__c</fullName>
    <label>Target Email Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>