force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__TargetMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TargetMember__c</fullName>
    <description>It displays the Member incentivized (Field API name).</description>
    <inlineHelpText>It displays the Member incentivized (Field API name).</inlineHelpText>
    <label>Target Member</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>