force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TargetObject__c</fullName>
    <description>Object field API name. It shows which related object is evaluated by the Rule and/or Mission, it different from the &quot;Engine Trigger&quot; Action.</description>
    <inlineHelpText>Choose a related object evaluated by the Rule and/or Mission, if different from the &quot;Engine Trigger&quot; Action.</inlineHelpText>
    <label>Target Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>