force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__TemplatesQuantity__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TemplatesQuantity__c</fullName>
    <description>Number of Email Templates tied to this Action.</description>
    <inlineHelpText>Number of Email Templates tied to this Action.</inlineHelpText>
    <label>Email Template Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>