force-app/main/default/objects/FieloPLT__Action__c/fields/FieloPLT__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UniqueKey__c</fullName>
    <description>It shows the Action Trigger ID together with the API Name of Target Member Lookup field.</description>
    <formula>FieloPLT__RuleTrigger__r.Id + FieloPLT__TargetMember__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It shows the Action Trigger ID together with the API Name of Target Member Lookup field.</inlineHelpText>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>