force-app/main/default/objects/FieloPLT__Action__c/listViews/VN_Youbet.listView-meta.xml
<ListView>
    <fullName>VN_Youbet</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__RuleTrigger__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Youbet</value>
    </filters>
    <label>Youbet</label>
    <language>pt_BR</language>
</ListView>